--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Biswesh Dhungana | Portfolio</title>
-  <style>
-    /* Add some style to the page */
+  <link rel="stylesheet" href="style.css">
+</head>
     body {
       background-color: #f5f5f5;
       font-family: Arial, sans-serif;
